fix font size on mobile devices

--- a/content/client/css/style.css
+++ b/content/client/css/style.css
@@ -1322,7 +1322,7 @@ body.darkmode .searchSuggestionContainer .suggestionItem .suggestionItemLabel em
 }
 
 #introHint .introHintText .introClaim {
-    font-size: 1.1rem;
+    font-size: 1rem;
 }
 
 @media (min-width:768px) {
